@@ -1,8 +1,8 @@
 Package: durmod
 Type: Package
 Title: Mixed Proportional Hazard Competing Risk Model
-Version: 1.1-1
-Date: 2019-07-24
+Version: 1.1-2
+Date: 2019-08-21
 Authors@R: person("Simen", "Gaure", email="simen@gaure.no", role=c("aut","cre"), 
         comment=c(ORCID="https://orcid.org/0000-0001-7251-8747"))
 URL: https://github.com/sgaure/durmod
@@ -24,7 +24,7 @@ LazyData: TRUE
 Encoding: UTF-8
 RoxygenNote: 6.1.1
 NeedsCompilation: yes
-Packaged: 2019-07-24 14:15:09 UTC; sgaure
+Packaged: 2019-08-21 07:42:45 UTC; sgaure
 Author: Simen Gaure [aut, cre] (<https://orcid.org/0000-0001-7251-8747>)
 Repository: CRAN
-Date/Publication: 2019-07-25 22:40:02 UTC
+Date/Publication: 2019-08-21 11:50:02 UTC
