@@ -1,31 +1,31 @@
-c90fb560544d270d9cdc479fa8d60ce1 *DESCRIPTION
-c3b48cce2989c8a70eb36042ad185ee1 *NAMESPACE
+38182306fbd50bd7e64ebea7d40131e6 *DESCRIPTION
+9235c3e4857da5497cb54bc33c90e1d8 *NAMESPACE
 7d499a572214a0ff0f2fdecbba228a43 *R/RcppExports.R
 6d2faf0b0890b6dfa5260a478e163a70 *R/cluster.R
 c152f8749aeefaf09b135f74e31128d9 *R/collin.R
 832de9f8e51e4cf5ecb48cf85dc143ff *R/datadoc.R
 a3bb9a3d53f12935bac6e10361e5ccb5 *R/datagen.R
-2b1e80d1925628bc81a8b34fe11e7f08 *R/duration.R
-56eb7a1aa2ca6f42570ab83427a2ab76 *R/durmod-package.R
+f31fd7adb79e914c7536eb97f5513250 *R/duration.R
+c46af14f752ee8a8f23c9214e0ccaa03 *R/durmod-package.R
 2c1dd6516eadb34dd143485fbf5d916a *R/generics.R
 9a9f58479293f1f623fa0dfeda38faa1 *R/startup.R
-11cd55dd1a03f0b3d3286491c2a4d65d *R/utils.R
+2f3832de507c1d430f5a38763c6b4fd2 *R/utils.R
 8611e9890a0ed33a5dacfdd4618e039b *build/vignette.rds
 10e910f9b55aea926fcaf16398fb0100 *data/durdata.rda
-af75c3ea4a58e5e9ef534a7394a05437 *inst/NEWS.Rd
+9713fb1bd837a47fccd8711c52e62684 *inst/NEWS.Rd
 4d6955fd14fa4167dd2bf90f916034e7 *inst/doc/whatmph.R
-9c32c622ca1f43eee8924c80aef5b299 *inst/doc/whatmph.Rnw
-0fa3a8cc7fde9b806ccb0026df9f5dd0 *inst/doc/whatmph.pdf
+13fc03171d74b348271c6e8dd6a395ab *inst/doc/whatmph.Rnw
+208fe9fef7ef82d3574dd0b54b474db1 *inst/doc/whatmph.pdf
 029340c64b5922efa87647d1bb076edf *man/a2p.Rd
 238c6b91d60693de02241b337fee5046 *man/datagen.Rd
 7768fc3aeade14790b771a90d1bfc4e7 *man/durdata.Rd
-627238c6c893c970d579f5e1cef525d8 *man/durmod-package.Rd
+fdd8db6670b18326c6a83c3e14da31d3 *man/durmod-package.Rd
 6abc2b10711310406de9fdd3ad57b542 *man/flatten.Rd
 57fe67eb7c4abb7c966a3765a6166caa *man/geninv.Rd
 feb4af14abde6dcc5679aba23b4fc6b4 *man/mphcrm.Rd
 48d05e5194dd091fb7bc65606287e7b8 *man/mphcrm.callback.Rd
 4404a5ca0f83c07f35c882bd76dae19c *man/mphcrm.control.Rd
-aae8f5494e56c60da2004887a20b6d2a *man/mphdist.Rd
+f5d1107142c07479ef39551e9ed28eb2 *man/mphdist.Rd
 10483bbd051f2b7051a78b5f9d5fb5ac *man/pseudoR2.Rd
 047699abfaad740ed341b190ee485715 *man/se.Rd
 f0242d631eba12c30647ad02edadbda4 *man/smashlevels.Rd
@@ -33,8 +33,8 @@ f0242d631eba12c30647ad02edadbda4 *man/smashlevels.Rd
 4b1f5e8f5d8afffc1d6b5d6876dc401c *src/Makevars
 11d6b2b20ff06021d544d7ff64bd0239 *src/Makevars.win
 d95bdd586bc74865591ccb015e702e3e *src/RcppExports.cpp
-bd2bdc2562e588fad69e6ee4eb8ac8a9 *src/cfunctions.cpp
+02c3db78d5ed1458209681afaedd6114 *src/cfunctions.cpp
 bbb2dab0a333c8f40ff19c72ae6a92a3 *tests/sometests.R
-48abbf8ded3bb2dbeb24b8683998d612 *tests/sometests.Rout.save
+fb70ad5199555a0cfdbca9ed677c1137 *tests/sometests.Rout.save
 e45906dbef15354a2ca4f1f7ea635dc0 *vignettes/biblio.bib
-9c32c622ca1f43eee8924c80aef5b299 *vignettes/whatmph.Rnw
+13fc03171d74b348271c6e8dd6a395ab *vignettes/whatmph.Rnw
