@@ -22,6 +22,7 @@ export(mphcrm.callback)
 export(mphcrm.control)
 export(mphdist)
 export(mphdist.log)
+export(mphmedian)
 export(mphmoments)
 export(mphmoments.log)
 export(p2a)
