@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2019-07-05 r76784) -- "Unsuffered Consequences"
+R Under development (unstable) (2019-08-21 r77049) -- "Unsuffered Consequences"
 Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -93,7 +93,7 @@ $coefs
 job.x1           0.89634 0.00931   96.2537  0.00e+00
 job.x2          -0.80995 0.00759 -106.7509  0.00e+00
 job.alpha       -0.17688 0.02670   -6.6241  3.67e-11
-job.f.2          0.07449 0.04287    1.7376  8.23e-02
+job.f.2          0.07449 0.04287    1.7377  8.23e-02
 job.f.3         -0.06195 0.04409   -1.4049  1.60e-01
 job.f.4          0.11317 0.04148    2.7287  6.37e-03
 job.f.5          0.01854 0.04311    0.4301  6.67e-01
@@ -103,7 +103,7 @@ program.x2       0.37743 0.01749   21.5830 4.31e-101
 program.f.2      0.20536 0.13447    1.5271  1.27e-01
 program.f.3      0.02068 0.13735    0.1505  8.80e-01
 program.f.4      0.00632 0.12036    0.0525  9.58e-01
-program.f.5     -0.13482 0.14185   -0.9504  3.42e-01
+program.f.5     -0.13482 0.14185   -0.9505  3.42e-01
 program.f.6      0.28122 0.14694    1.9138  5.57e-02
 program.g.2      0.03025 0.13082    0.2312  8.17e-01
 program.g.3      0.14083 0.13864    1.0157  3.10e-01
@@ -111,7 +111,7 @@ program.g.4     -0.02071 0.14072   -0.1472  8.83e-01
 program.f:g.2:2 -0.30106 0.19641   -1.5328  1.25e-01
 program.f:g.2:3 -0.24366 0.19296   -1.2627  2.07e-01
 program.f:g.2:4  0.03646 0.20306    0.1796  8.58e-01
-program.f:g.3:2  0.10878 0.19535    0.5569  5.78e-01
+program.f:g.3:2  0.10878 0.19535    0.5568  5.78e-01
 program.f:g.3:3 -0.17411 0.19189   -0.9073  3.64e-01
 program.f:g.3:4  0.16215 0.19720    0.8223  4.11e-01
 program.f:g.4:2 -0.00186 0.17351   -0.0107  9.91e-01
@@ -174,4 +174,4 @@ job 0.0172
 > 
 > proc.time()
    user  system elapsed 
- 11.809   0.231   4.793 
+   6.87    0.24    4.31 
